# dyll

./: .gitignore  Cargo.toml  Dockerfile.dev  Makefile  README.md
.github/workflows/: ci.yml
examples/: .gitignore
examples/cuda/: Cargo.toml
examples/cuda/src/: lib.rs  types.rs
examples/mock-rust/: Cargo.toml
examples/mock-rust/src/: dyll.rs  lib.rs
examples/nvml/: Cargo.toml  Dockerfile  build.sh  run.sh  setup.sh
examples/nvml/src/: dl.rs  lib.rs  types.rs
examples/nvml/tests/: discover-config.sh  nvidia-container-toolkit.sh
examples/program/: test_unknown_lib.h
project-template/: README.md
project-template/src/: lib.rs
src/: cli.rs  generator.rs  lib.rs  main.rs  providers.rs  template.rs
src/codegen/: rust.rs
src/codegen/rust/: mod.rs  rustlib.tpl.rs
src/commands/: header.rs
src/config/: mod.rs
src/project-template/: Cargo.toml  README.md
src/project-template/.cargo/: config.toml
src/project-template/src/: config.rs  dl.rs  lib.rs  types.rs
src/providers/: header.rs  mod.rs
src/signature/: header.rs  mod.rs
src/templates/: lib.tpl.rs  mod.rs
tests/: test  test.sh  test_lib.c  test_lib.h  test_program_dlopen.c  test_unknown_lib.c  test_unknown_symbols.c
tests/mock/: Cargo.toml
tests/mock/src/: dyll.rs  lib.rs
