[package]
name = "mock_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
env_logger = "0.11.8"
log = "0.4.29"

[lib]
crate-type = ["cdylib"]


# generated via:
# cargo run -- --lib-path ~/Downloads/cuda_cudart-linux-sbsa-13.3.29-archive/lib/stubs/libcuda.so -o examples/cuda header ~/Downloads/cuda_cudart-linux-sbsa-13.3.29-archive/include/cuda.h
